feat:add adaptation for mobile phone; add adaptation header;add adaptation section find-car;add adaptation section search-car; add adaptaiton section how-work;add animation section brand-auto; add adaptation section choose-text; add adaptation section rent-car; add adaptation section reviews; add adaptation section app;add adaptation footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/media.css">
     <link rel="icon" type="img" href="./assets/image/logo.png" sizes="16x16">
     <title>Rentcars</title>
 </head>
@@ -14,10 +15,12 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="./assets/image/logo.png" alt="Logo">
-                <h2>RENTCARS</h2>
+                <a href="./index.html"><img src="./assets/image/logo.png" alt="Logo">
+                    <h2>RENTCARS</h2>
+                </a>
             </div>
             <nav>
+                <img src="./assets/image/darhboard@2x.png" alt="dashboard">
                 <ul>
                     <a href="#">
                         <li>Become a renter</li>
@@ -77,7 +80,9 @@
                         <p>Thu 16 Feb, 11:00</p>
                     </div>
                 </div>
-                <button class="btn-primary">Search</button>
+                <div class="btn-primary-page">
+                    <button class="btn-primary">Search</button>
+                </div>
             </div>
         </div>
     </section>
@@ -118,6 +123,13 @@
                 <img src="./assets/image/logo-volvo.png" alt="Volvo">
                 <img src="./assets/image/logo-audi.png" alt="Audi">
                 <img src="./assets/image/logo-acura.png" alt="Acura">
+
+                <img src="./assets/image/logo-honda.png" alt="Honda">
+                <img src="./assets/image/logo-jaguar.png" alt="Jaguar">
+                <img src="./assets/image/logo-nissan.png" alt="Nissan">
+                <img src="./assets/image/logo-volvo.png" alt="Volvo">
+                <img src="./assets/image/logo-audi.png" alt="Audi">
+                <img src="./assets/image/logo-acura.png" alt="Acura">
             </div>
         </div>
     </section>
@@ -125,8 +137,9 @@
         <div class="container">
             <div class="choose">
                 <div class="choose-car">
-                    <img src="./assets/image/Vector-chose.png" alt="">
-                    <img src="./assets/image/car-audi.png" alt="audi">
+                    <div class="car-image-midle">
+                        <img src="./assets/image/car-audi.png" alt="audi">
+                    </div>
                 </div>
                 <div class="choose-content">
                     <div class="choose-text">
@@ -432,7 +445,7 @@
                         <img src="./assets/image/mini-icon/app-store.png" alt="app-store">
                     </div>
                 </div>
-                <img src="./assets/image/iPhone 14 Pro Space Black Mockup.png" alt="Phone">
+                <img class="iphone-footer" src="./assets/image/iPhone 14 Pro Space Black Mockup.png" alt="Phone">
             </div>
         </div>
     </section>
