feat:add adaptation for tablet; add adaptation header; add adaptation section find-car; add adaptation section search-car; add adaptaiton section how-work; add adaptation section choose-text; add adaptation section rent-car; add adaptation section reviews; add adaptation section app;add adaptation footer

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                 <div class="find-car-text">
                     <h2>Find, book and rent a car Easily</h2>
                     <p>Get a car wherever and whenever you need it with your IOS and Android device.</p>
-                    <img src="./assets/image/mini-icon/google-play.png" alt="Google Play">
-                    <img src="./assets/image/mini-icon/app-store.png" alt="App Store">
+                    <div class="app-download">
+                        <img src="./assets/image/mini-icon/google-play.png" alt="Google Play">
+                        <img src="./assets/image/mini-icon/app-store.png" alt="App Store">
+                    </div>
                 </div>
                 <div class="background-car">
                     <img class="vector-logo-background" src="./assets/image/vector-logo.png" alt="vector logo">
